--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -29,3 +29,9 @@ jobs:
 
       - name: unit unit-testing
         run: npm test
+        
+      - name: upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Mocha-Test-Result
+          path: test-result.xml
