--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -29,6 +29,9 @@ jobs:
 
       - name: unit unit-testing
         run: npm test
+      
+      - name: list files
+        run: ls -ltr
         
       - name: upload artifacts
         uses: actions/upload-artifact@v4
