--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -26,7 +26,7 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v4
 
-      - name: setup nodejs 18 version
+      - name: setup nodejs ${{ matrix.nodejs_verion }}
         uses: actions/setup-node@v4
         with:
          node-version: ${{ matrix.nodejs_verion }}
@@ -43,5 +43,5 @@ jobs:
       - name: Archive artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Mocha-Test-Result
+          name: Mocha-Test-Result-${{ matrix.operating_system}}-node${{ matrix.nodejs_verion}}
           path: test-results.xml
