added continue on error

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -62,10 +62,11 @@ jobs:
 
       - name: run code coverage
         run: npm run coverage
+        continue-on-error: true
 
       - name: Archive test result
         uses: actions/upload-artifact@v4
-        with:
+        with: 
           name: code-coverage-report
           path: coverage
           retention-days: 1
