added intended error

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -16,7 +16,7 @@ jobs:
    unit-testing:
     strategy:
       matrix:
-        nodejs_verion: [18, 19, 20]
+        nodejs_verion: [18, 20]
         operating_system: [ubuntu-latest, macos-latest]
         exclude:
           - nodejs_verion: 18
