--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -35,12 +35,11 @@ jobs:
         run: npm install
 
       - name: unit unit-testing
+        id: nodejs-unit-testing-step
         run: npm test
-      
-      - name: list files
-        run: ls -ltr
-        
+
       - name: Archive artifacts
+        if: steps.nodejs-unit-testing-step.outcome == 'failure' || steps.nodejs-unit-testing-step.outcome == 'success'
         uses: actions/upload-artifact@v4
         with:
           name: Mocha-Test-Result-${{ matrix.operating_system}}-node${{ matrix.nodejs_verion}}
