--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -39,7 +39,7 @@ jobs:
         run: npm test
 
       - name: Archive artifacts
-        if: failure() && steps.nodejs-unit-testing-step.outcome == 'failure' || steps.nodejs-unit-testing-step.outcome == 'success'
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: Mocha-Test-Result-${{ matrix.operating_system}}-node${{ matrix.nodejs_verion}}
