--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -31,6 +31,12 @@ jobs:
         with:
          node-version: ${{ matrix.nodejs_verion }}
 
+      - name: Cache npm 
+        uses: actions/cache@v4
+        with:
+           path: node_modules
+           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+
       - name: install dependencies
         run: npm install
 
@@ -39,7 +45,7 @@ jobs:
         run: npm test
 
       - name: Archive artifacts
-        if: success()
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: Mocha-Test-Result-${{ matrix.operating_system}}-node${{ matrix.nodejs_verion}}
@@ -55,6 +61,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
          node-version: 18
+      
+      - name: Cache npm 
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: install dependencies
         run: npm install
