--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mocha-junit-reporter": "^2.2.1",
     "mongoose": "5.13.20",
     "nodemon": "^3.1.9",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "react": "^19.1.0"
   },
   "devDependencies": {
     "chai": "*",
