--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lines": 90
   },
   "dependencies": {
+    "angular": "^1.8.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mocha-junit-reporter": "^2.2.1",
