--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular": "^1.8.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "logzio-nodejs": "^2.3.0",
     "mocha-junit-reporter": "^2.2.1",
     "mongoose": "5.13.20",
     "nyc": "^15.1.0",
