--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -81,3 +81,15 @@ jobs:
           name: code-coverage-report
           path: coverage
           retention-days: 1
+   docker-login:
+    runs-on: ubuntu-latest
+    needs: [unit-testing, code-coverage]
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
