--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -81,6 +81,7 @@ jobs:
           name: code-coverage-report
           path: coverage
           retention-days: 1
+
    docker-login:
     runs-on: ubuntu-latest
     needs: [unit-testing, code-coverage]
@@ -93,3 +94,25 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build docker image for testing
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+
+      - name: Docker image testing
+        run: |
+          docker images
+          docker run --name solar-system-app -d \
+            -p 3000:3000
+            -e MONGO_URI=$MONGO_URI \
+            -e MONGO_USERNAME=$MONGO_USERNAME \
+            -e MONGO_PASSWORD=$MONGO_PASSWORD \
+            ${{ env. DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+          
+          export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+          echo $IP
+
+          echo Testing Image URL using wget
+          wget -q -o - 127.0.0.1:3000/live | grep live
