--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -115,4 +115,4 @@ jobs:
           echo $IP
 
           echo Testing Image URL using wget
-          wget -q -o - 127.0.0.1:3000/live | grep live
+          wget -qO - 127.0.0.1:3000/live | grep live
