--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -94,6 +94,13 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      
+      - name: login to github registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build docker image for testing
         uses: docker/build-push-action@v6
@@ -117,8 +124,11 @@ jobs:
           echo Testing Image URL using wget
           wget -qO - 127.0.0.1:3000/live | grep live
 
-      - name: Build docker image for testing
+      - name: Container registry push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+          tags: |
+            ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
