--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -85,6 +85,9 @@ jobs:
    docker-login:
     runs-on: ubuntu-latest
     needs: [unit-testing, code-coverage]
+    permissions: 
+      contents: read
+      packages: write
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
