--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -32,7 +32,7 @@ jobs:
         exclude:
           - nodejs_version: 18
             operating_system: macos-latest
-            
+
     runs-on: ${{ matrix.operating_system }}
     steps:
       - name: checkout repo
@@ -64,14 +64,25 @@ jobs:
 
    code-coverage:
      runs-on: ubuntu-latest
+     container:
+        image: gcr.io/distroless/nodejs18-debian12
+     services:
+      mongo-db:
+        image: siddharth67/mongo-db:non-prod
+        options:
+          --name mongo
+     env:
+        MONGO_URI: 'mongodb://mongo:27017/superData'
+        MONGO_USERNAME: non-prod-user
+        MONGO_PASSWORD: non-prod-password
      steps:
       - name: checkout repo
         uses: actions/checkout@v4
       
-      - name: setup nodejs 18
-        uses: actions/setup-node@v4
-        with:
-         node-version: 18
+      # - name: setup nodejs 18
+      #   uses: actions/setup-node@v4
+      #   with:
+      #    node-version: 18
       
       - name: Cache npm 
         uses: actions/cache@v4
