--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -157,3 +157,24 @@ jobs:
           tags: |
             ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
+    
+   dev-deploy:
+    needs: docker-login
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+          version: 'v1.26.0'
+      
+      - name: Fetch k8s version
+        run: |
+          kubectl version --short
+          echo ==================
+          kubectl get nodes -o wide
+          echo ==================
+          kubectl get all -A
+          echo ==================
